--- a/css/styles.css
+++ b/css/styles.css
@@ -6,24 +6,39 @@ body {
 #level-title {
   font-family: 'Press Start 2P', cursive;
   font-size: 3rem;
-  margin:  5%;
+  margin: 5%;
   color: #FEF2BF;
 }
 
 .container {
   display: block;
-  width: 50%;
+  width: 70%;
   margin: auto;
+}
 
+@media screen and (min-width: 1120px) {
+  .container {
+    width: 50%;
+  }
 }
 
 .btn {
-  margin: 25px;
+  margin: 14px;
   display: inline-block;
-  height: 200px;
-  width: 200px;
-  border: 10px solid black;
-  border-radius: 20%;
+  height: 120px;
+  width: 120px;
+  border: 6px solid black;
+  border-radius: 140%;
+}
+
+@media screen and (min-width: 810px) {
+  .btn {
+    border: 10px solid black;
+    border-radius: 20%;
+    margin: 25px;
+    height: 200px;
+    width: 200px;
+  }
 }
 
 .game-over {
